--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,14 @@
 .App {
   text-align: center;
   width: 100%;
+
 }
 
-.container: {
-  magin:0px;
+.container {
+  margin:0px;
 }
+
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
